[gd_scene load_steps=3 format=3 uid="uid://bd8x4sdh5fspv"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/dialogs/windows-dialog/windows-dialog.gd" id="1"]
[ext_resource type="Theme" uid="uid://ccr2k4swymel8" path="res://assets/themes/default_button_theme.tres" id="2_mxldn"]

[node name="Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResponseLabel" type="Label" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2

[node name="OpenDialogButton" type="Button" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
theme = ExtResource("2_mxldn")
text = "Open Window Dialog"

[node name="Window" type="Window" parent="."]
position = Vector2i(500, 250)
size = Vector2i(250, 100)
visible = false
exclusive = true

[node name="QuestionLabel" type="Label" parent="Window"]
layout_direction = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_right = 66.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Do you like cake?"

[node name="YesButton" type="Button" parent="Window"]
offset_left = 42.189
offset_top = 40.0
offset_right = 106.189
offset_bottom = 77.0
text = "Yes"

[node name="NoButton" type="Button" parent="Window"]
offset_left = 150.74
offset_top = 40.0
offset_right = 214.74
offset_bottom = 77.0
text = "No"

[connection signal="pressed" from="OpenDialogButton" to="." method="_on_OpenDialogButton_pressed"]
[connection signal="pressed" from="Window/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Window/NoButton" to="." method="_on_NoButton_pressed"]
